[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.1.1"
syntect = "5.0.0"
termimad = "0.23.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3.28"
futures-util = "0.3.28"
