[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "5.0.0"
termimad = "0.23.0"

futures-util = "0.3.28"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3.28"
reqwest = "0.11.16"
chatgpt_rs = { version = "1.1.1", features = ["streams"] }
